[api++]: completed user module
