# api/src/modules/users/dto/update-user.dto.ts
@@ -1,0 +1,5 @@
+export class UpdateUserDto {
+  name?: string;
+  password?: string;
+  email?: string;
+}
